--- a/configs/config
+++ b/configs/config
@@ -405,6 +405,7 @@ exec_always --no-startup-id /home/sudacode/scripts/wallpaper.sh
 exec --no-startup-id ~/scripts/calendar.sh
 exec --no-startup-id ~/scripts/todo.sh
 
-for_window [class="plasmawindowed" title="TodoList"] resize set 1200 2000
+for_window [class="plasmawindowed" title="TodoList"] resize set 1200 2000, border none
+for_window [class="plasmawindowed" title="Event Calendar"] border none
 for_window [class="eecs285-proj3-ksyasuda-WheelOfFortune"] floating enable
 for_window [title="Android Emulator - Pixel_3a_API_30_x86:5554"] floating enable, border none
