--- a/configs/config.desktop.ini
+++ b/configs/config.desktop.ini
@@ -63,7 +63,7 @@ offset-x = 2.5%
 bottom = false
 fixed-center = false
 line-size = 2
-radius = 5
+radius = 0
 
 #background = ${color.bg}
 background = #282c34
@@ -77,7 +77,7 @@ font-1 = "Iosevka Nerd Font:pixelsize=12;3"
 font-2 = Weather Icons:size=12;1
 font-3 = "Source Han Sans JP:pixelsize=12;antialias=true;3"
 
-dip = 250
+dpi = 250
 
 ;==========================================================
 
@@ -141,36 +141,4 @@ exec = ~/scripts/aur.sh
 format-background = ${color.shade7}
 format-padding = 3
 tail = true
-
-#[module/pkg]
-#type = custom/script
-##exec = ~/.config/polybar/scripts/updates.sh
-#exec = ~/scripts/updates.sh
-#format-background = ${color.shade5}
-#format-foreground = #60CAD7
-#click-left = konsole
-#format-padding = 5
-#tail = true
-
-#[module/volume]
-#type = internal/alsa
-#format-volume = <ramp-volume> <label-volume>
-#format-volume-padding = 4
-#format-volume-background = ${color.shade5}
-#format-volume-foreground = #55AEBB 
-#label-volume = %percentage%%
-#label-muted = "婢"
-#label-muted-background = ${color.shade5}
-#label-muted-padding = 4
-#
-#ramp-volume-0 = 奄
-#ramp-volume-1 = 奄
-#ramp-volume-2 = 奔
-#ramp-volume-3 = 奔
-#ramp-volume-4 = 墳
-#ramp-volume-5 = 墳
-#ramp-volume-6 = 墳
-
-
-
 ;== EOF ========================================================
