Add new spotify-bar-desktop module
Make new module with shorter truncate length so that the bar never
overflows

--- a/include-modules.ini
+++ b/include-modules.ini
@@ -9,6 +9,7 @@ include-file = $HOME/i3/modules/battery.ini
 include-file = $HOME/i3/modules/package-updates-trigger.ini
 include-file = $HOME/i3/modules/package-updates.ini
 include-file = $HOME/i3/modules/spotify-bar.ini
+include-file = $HOME/i3/modules/spotify-bar-desktop.ini
 include-file = $HOME/i3/modules/spotify-controls.ini
 include-file = $HOME/i3/modules/cpu.ini
 include-file = $HOME/i3/modules/vscode.ini
