--- a/modules/flameshot.ini
+++ b/modules/flameshot.ini
@@ -3,5 +3,5 @@ type = custom/text
 content = 
 content-padding = 2
 content-foreground = #fc8353
-click-left = flameshot gui
+click-left = exec ~/scripts/flameshot_gui.sh
 click-right = flameshot config
