add mpd controls to polybar

--- a/configs/config.ini
+++ b/configs/config.ini
@@ -105,7 +105,7 @@ scroll-down = i3wm-wsprev
 
 modules-left = menu workspaces network bluetooth2 dolphin flameshot color-picker
 # modules-center = spotify-prev spotify-bar spotify-next jdate package-updates-trigger package-updates 
-modules-center = spotify-prev spotify-bar spotify-next 
+modules-center = spotify-prev spotify-bar spotify-next mpd-prev custom-mpd mpd-next
 # modules-right = network bluetooth2 volume battery openweathermap-fullfeatured date powermenu
 modules-right = package-updates-trigger package-updates jdate volume battery openweathermap-fullfeatured date powermenu
  
@@ -118,33 +118,19 @@ content-padding = 2
 content-foreground = #28c15b
 click-left = plasmawindowed org.kde.plasma.colorpicker
 
-[module/facebook]
-type = custom/text
-content = 
-content-padding = 2
-content-foreground = ${color.blue}
-click-left = xdg-open https://www.facebook.com &
-
-[module/youtube]
-type = custom/text
-content = 
-content-padding = 2
-content-foreground = ${color.red}
-click-left = xdg-open https://www.youtube.com &
-
 [module/mpd]
 type = internal/mpd
 format-online = <toggle> <label-song> 
-;format-online =  <label-song> 
-;alt icons =   
+# format-online =  <label-song> 
+# alt icons =   
 format-online-background = ${color.shade8}
 format-online-foreground = ${color.txt}
-format-online-padding = 5
+format-online-padding = 1
 
 icon-play = 喇
 icon-pause = 
 
-label-song-maxlen = 25
+label-song-maxlen = 40
 label-song-ellipsis = true
 
 ;==========================================================
