--- a/include-modules.ini
+++ b/include-modules.ini
@@ -1,4 +1,5 @@
 include-file = $HOME/i3/modules/memory.ini
+include-file = $HOME/i3/modules/custom-mpd.ini
 include-file = $HOME/i3/modules/jdate.ini
 include-file = $HOME/i3/modules/openweathermap-fullfeatured.ini
 include-file = $HOME/i3/modules/color-picker.ini
