--- a/configs/config
+++ b/configs/config
@@ -384,12 +384,23 @@ bindsym Mod1+m exec --no-startup-id $HOME/scripts/flameshot_full.sh
 # launch pavucontrol with Alt+p
 bindsym Mod1+p exec --no-startup-id $HOME/scripts/pavucontrol.sh
 
-# Bind F7 to Next Song
-bindsym XF86AudioPrev exec --no-startup-id $HOME/scripts/spotify-controls.sh -b
+## Spotify/Mpd controls
+# Bind F4 to Next Song
+bindsym XF86AudioPrev exec --no-startup-id $HOME/scripts/spotify-controls.sh -b;\
+        exec --no-startup-id $HOME/i3/scripts/music-controls.sh -p
+# Bind F6 to Pause/Play
+bindsym XF86AudioPlay exec --no-startup-id $HOME/scripts/spotify-controls.sh -p;\
+        exec --no-startup-id $HOME/i3/scripts/music-controls.sh -t
+# Bind F5 to Next Song
+bindsym XF86AudioNext exec --no-startup-id $HOME/scripts/spotify-controls.sh -n;\
+        exec --no-startup-id $HOME/i3/scripts/music-controls.sh -n
+
+## Mpd
+# bindsym XF86AudioPrev exec --no-startup-id $HOME/i3/scripts/music-controls.sh -p
 # Bind F8 to Pause/Play
-bindsym XF86AudioPlay exec --no-startup-id $HOME/scripts/spotify-controls.sh -p
+# bindsym XF86AudioPlay exec --no-startup-id $HOME/i3/scripts/music-controls.sh -t
 # Bind F9 to Next Song
-bindsym XF86AudioNext exec --no-startup-id $HOME/scripts/spotify-controls.sh -n
+# bindsym XF86AudioNext exec --no-startup-id $HOME/i3/scripts/music-controls.sh -n
 
 # get a new wallpaper
 bindsym Control+Mod1+n exec --no-startup-id $HOME/scripts/new-wallpaper.sh
