--- a/modules/custom-mpd.ini
+++ b/modules/custom-mpd.ini
@@ -4,6 +4,7 @@ interval = 1
 exec = $HOME/i3/scripts/show-music.sh
 format = <label>
 click-left = exec $HOME/i3/scripts/music-controls.sh -t
+click-right = alacritty -e ncmpcpp
 format-padding = 1
 format-underline = #1DB954 
 format-foreground = #55AEBB
