update the custom mpd script to use zscroll

--- a/modules/custom-mpd.ini
+++ b/modules/custom-mpd.ini
@@ -1,6 +1,7 @@
 [module/custom-mpd]
 type = custom/script
-interval = 1
+tail = true
+interval = 0
 exec = $HOME/i3/scripts/show-music.sh
 format = <label>
 click-left = exec $HOME/i3/scripts/music-controls.sh -t
