update desktop to use mpd

--- a/configs/config.desktop
+++ b/configs/config.desktop
@@ -385,11 +385,14 @@ bindsym Mod1+m exec --no-startup-id $HOME/scripts/flameshot_full.sh
 bindsym Mod1+p exec --no-startup-id $HOME/scripts/pavucontrol.sh
 
 # Bind F7 to Next Song
-bindsym XF86AudioPrev exec --no-startup-id $HOME/scripts/spotify-controls.sh -b
+bindsym XF86AudioPrev exec --no-startup-id $HOME/scripts/spotify-controls.sh -b; exec --no-startup-id $HOME/i3/scripts/music-controls.sh -n
 # Bind F8 to Pause/Play
-bindsym XF86AudioPlay exec --no-startup-id $HOME/scripts/spotify-controls.sh -p
+bindsym XF86AudioPlay exec --no-startup-id $HOME/scripts/spotify-controls.sh -p; exec --no-startup-id $HOME/i3/scripts/music-controls.sh -t
 # Bind F9 to Next Song
-bindsym XF86AudioNext exec --no-startup-id $HOME/scripts/spotify-controls.sh -n
+bindsym XF86AudioNext exec --no-startup-id $HOME/scripts/spotify-controls.sh -n; exec --no-startup-id $HOME/i3/scripts/music-controls.sh -p
+
+# bind alt n to ncmpcpp
+bindsym Mod1+n exec --no-startup-id alacritty -e ncmpcpp
 
 # get a new wallpaper
 bindsym Control+Mod1+n exec --no-startup-id $HOME/scripts/new-wallpaper.sh
