--- a/configs/config.desktop.ini
+++ b/configs/config.desktop.ini
@@ -91,7 +91,7 @@ scroll-down = i3wm-wsprev
 
 modules-left = menu workspaces network-desktop bluetooth-desktop dolphin flameshot color-picker
 # modules-center = spotify-prev spotify-bar spotify-next jdate package-updates-trigger package-updates 
-modules-center = spotify-prev spotify-bar-desktop spotify-next 
+modules-center = spotify-prev spotify-bar-desktop spotify-next mpd-prev custom-mpd mpd-next
 # modules-right = network bluetooth2 volume battery openweathermap-fullfeatured date powermenu
 modules-right = package-updates-trigger package-updates jdate volume battery openweathermap-fullfeatured date powermenu
  
