add playerctl module

--- a/configs/config.ini
+++ b/configs/config.ini
@@ -105,7 +105,7 @@ scroll-down = i3wm-wsprev
 
 modules-left = menu workspaces network bluetooth2 dolphin flameshot color-picker
 # modules-center = spotify-prev spotify-bar spotify-next jdate package-updates-trigger package-updates 
-modules-center = spotify-prev spotify-bar spotify-next mpd-prev custom-mpd mpd-next
+modules-center = spotify-prev spotify-bar spotify-next mpd-prev custom-mpd mpd-next playerctl-prev playerctl-show playerctl-next
 # modules-right = network bluetooth2 volume battery openweathermap-fullfeatured date powermenu
 modules-right = package-updates-trigger package-updates jdate volume battery openweathermap-fullfeatured date powermenu
  
